# nix-templates

./: LICENSE  flake.nix
cpp/: CMakeLists.txt  flake.nix  justfile  vcpkg.json
cpp/include/project/: logic.hpp
cpp/src/: entry_point.cpp  logic.cpp
cpp/tests/: test_main.cpp
latex/: flake.nix
python/: flake.nix
rust-graphics/: .gitignore  Cargo.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
